prow/cluster/tls-ing_ingress.yaml
# Copyright 2016 The Kubernetes Authors All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: prod-nginx
    kubernetes.io/tls-acme: "true"
  name: prow-ing
  namespace: default
spec:
  rules:
  - host: prow.build-infra.jetstack.net
    http:
      paths:
      - backend:
          service:
            name: deck
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: hook
            port:
              number: 8888
        path: /hook
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - prow.build-infra.jetstack.net
    secretName: prow-tls
